--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,17 @@ button {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--header-color-second)
+    color: var(--header-color-second);
+    display: block;
+}
+
+.header-link-first::after{
+    content: "";
+    width: auto;
+    height: 4px;
+    background: #2196F3;
+    border-radius: 2px;
+    display: block;
 }
 
 .header-link-second {
@@ -99,7 +109,8 @@ button {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--header-color-third)
+    color: var(--header-color-third);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-item:not(:last-child) {
@@ -120,7 +131,8 @@ button {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--header-color-first)
+    color: var(--header-color-first);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-mail:hover {
     color:var(--header-color-second)
@@ -135,6 +147,7 @@ button {
     letter-spacing: 0.02em;
     color: var(--header-color-first);
     margin-left: 50px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-icon{
     fill: currentColor;
@@ -193,9 +206,13 @@ button {
     padding: 10px 32px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 .first-main-button:hover {
+    background-color: #188CE8;
+}
+.first-main-button:focus {
     background-color: #188CE8;
 }
 .second-main-section {
@@ -320,7 +337,10 @@ padding-bottom: 94px;
     justify-content: center;
     align-items: center;
     color: #AFB1B8;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .fourth-main-soc-icon{
     fill: currentColor;
 }
@@ -369,7 +389,9 @@ padding-bottom: 94px;
     fill: #AFB1B8;
     display:flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .fifth-main-list-link:hover{
     fill: #2196F3;
@@ -452,6 +474,8 @@ padding-bottom: 94px;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .fotter-soc-icon {
@@ -483,6 +507,7 @@ padding-bottom: 94px;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     margin-bottom: 9px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-mail-item{
     margin-bottom: 9px;
@@ -497,7 +522,9 @@ padding-bottom: 94px;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6)
+    color: rgba(255, 255, 255, 0.6);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .footer-tel-link:hover {
     color: var(--title-color-second)
@@ -505,6 +532,52 @@ padding-bottom: 94px;
 
 .footer-tel-link:focus {
     color: var(--title-color-second)
+}
+/* ---------------------------modal-window------------------------------- */
+.backdrop{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: opacity 1500ms, visibility 1500ms;
+    
+}
+.modal{
+    width: 1600px;
+    height: 1024px;
+    background: #FFFFFF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1) rotate(0deg);
+    
+}
+
+.backdrop.is-hidden .modal{
+    transform: scale(0.5) rotate(290deg);
+}
+.modal-btn{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    left: 1026px;
+    top: 229px;
+    border-radius: 50%;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
 }
 /* ---------------------------portfolio------------------------------- */
 .portfolio-section {
@@ -538,6 +611,8 @@ padding-bottom: 94px;
     0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-first-list-button:hover {
@@ -567,6 +642,7 @@ padding-bottom: 94px;
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
     box-sizing: border-box;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-second-main-list-group:hover{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -577,6 +653,30 @@ padding-bottom: 94px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-img-text-wrap{
+    position: relative;
+    overflow: hidden;
+
+}
+.portfolio-img-text{
+    position: absolute;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    background: rgba(33, 150, 243, 0.9);
+    height: 100%;
+    top: 0;
+    padding: 63px 24px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.portfolio-second-main-list-group:hover .portfolio-img-text{
+    transform: translateY(0%);
 }
 .portfolio-list-text-first {
     font-weight: 700;
