--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,6 @@ button {
 /* ---------------------------header------------------------------- */
 .header {
     background: #FFFFFF;
-    padding-top: 24px;
-    padding-bottom: 25px;
     border-bottom: 1px solid #ECECEC;
 }
 
@@ -93,15 +91,21 @@ button {
     letter-spacing: 0.02em;
     color: var(--header-color-second);
     display: block;
+    padding-bottom: 32px;
+    padding-top: 32px;
+    position: relative;
 }
 
 .header-link-first::after{
     content: "";
-    width: auto;
+    width: 100%;
     height: 4px;
     background: #2196F3;
     border-radius: 2px;
     display: block;
+    bottom: 0;
+    position: absolute;
+    
 }
 
 .header-link-second {
@@ -109,6 +113,9 @@ button {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    display: block;
+    padding-bottom: 32px;
+    padding-top: 32px;
     color: var(--header-color-third);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
