--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,8 @@ background: rgba(47, 48, 58, 0.8);
     border: 1px solid #000000;
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    transition: opacity 1500ms, visibility 1500ms;
+    transition: visibility 15000ms cubic-bezier(0.4, 0, 0.2, 1), 
+    opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .modal{
